# basalt

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.js
.cargo/: config.toml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/pwa/: next.config.js  package.json  tailwind.config.js  tsconfig.json
docs/: TESTING_INDEXEDDB_PERSISTENCE.md  UNIFIED_OBSIDIAN_REBUILD_PLAN.md
scripts/minio-setup/: README.md  requirements.txt  setup.ps1  setup.sh  setup_minio.py
tests/: README.md  integration.attachments.test.js  integration.backlinks.test.js  integration.constraints.test.js  integration.export-import.test.js  integration.export-only.test.js  integration.folder-hierarchy.test.js  integration.fts5.test.js  integration.import-only.test.js  integration.real.test.js  integration.simple.test.js  integration.sqlite-cli.test.js  integration.tags.test.js  integration.transactions.test.js  workspace.test.js
tests/e2e/: autosave-debug.e2e.test.js  autosave.e2e.test.js  clickable-wikilinks.e2e.test.js  codemirror-editor.e2e.test.js  console-debug.e2e.test.js  console-logging.e2e.test.js  create-note.e2e.test.js  data-persistence.e2e.test.js  database-clear-export-import.e2e.test.js  database-corruption-reload.e2e.test.js  database-import.e2e.test.js  debug-autosave-notes.e2e.test.js  debug-wikilinks.e2e.test.js  delete-note.e2e.test.js  drag-drop-folders.e2e.test.js  edit-note.e2e.test.js  (+30 more)
(+13 files in other folders)
