[package]
name = "basalt-desktop"
version = "0.1.0"
description = "Tauri 2.0 shell for the Basalt Obsidian rebuild."
authors = ["Basalt Contributors"]
edition = "2021"

[lib]
name = "basalt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
absurder-sql = { git = "https://github.com/npiesco/absurder-sql.git", features = ["fs_persist"] }

[dev-dependencies]
scopeguard = "1.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
